reorganized, mod. crosshair/settings

--- a/730/local/cfg/practice.cfg
+++ b/730/local/cfg/practice.cfg
@@ -21,9 +21,9 @@ sv_showimpacts 1
 sv_showimpacts_time 10
 
 // binds
-bind "End" noclip
-bind "Pos1" give weapon_hegrenade;give weapon_flashbang;give weapon_smokegrenade;give weapon_incgrenade;give weapon_molotov;give weapon_decoy
-bind "Insert" cast_ray
+bind "end" "noclip"
+bind "home" "give weapon_hegrenade; give weapon_flashbang; give weapon_smokegrenade; give weapon_incgrenade; give weapon_molotov; give weapon_decoy"
+bind "ins" "cast_ray"
 
 mp_restartgame 1
 
