--- a/730/local/cfg/autoexec.cfg
+++ b/730/local/cfg/autoexec.cfg
@@ -1,24 +1,74 @@
 ////// settings
+
 // don't switch weapon automatically
 cl_autowepswitch "0"
+
+// don't open buy menu with use key
+cl_use_opens_buy_menu "0"
+
 // raw mouse input
 m_rawinput "1"
+m_customaccel "0"
+m_mouseaccel1 "0"
+m_mouseaccel2 "0"
+
+// sensitivity
+sensitivity "0.4"
+zoom_sensitivity_ratio_mouse "1.0"
+
 // maximum ping for match making
 mm_dedicated_search_maxping "80"
 
+// enable voice chat
+voice_enable "1"
+lobby_voice_chat_enabled "0"
+
+
+////// HUD
+hud_scaling 0.7
+
+// show player count instead of avatars
+cl_hud_playercount_showcount 1
+
+// turn off dev messages in top left corner
+developer 0
+
+/// radar
+cl_radar_always_centered 0
+// size
+cl_hud_radar_scale 1.1
+// zoom
+cl_radar_scale 0.55
+// player icons
+cl_radar_icon_scale_min 0.4
+
+// disable developer text
+developer 0
+
+
+////// rates
+cl_cmdrate "128"
+cl_updaterate "128"
+cl_interp_ratio 1
+cl_interp 0
+
+
 ////// FPS
+
 // force preloading the level to reduce stuttering while loading
 cl_forcepreload 1
-// remove FPS cap
+
+// cap FPS at 180
 fps_max 181
+
 // reduce power usage in menu
 fps_max_menu 61
+
 // disable eye gloss and movement
 r_eyegloss "0"
 r_eyemove "0"
 
 ////// execute other configs
-exec crosshair
 exec binds
 
 ////// write config to config.cfg
