--- a/730/local/cfg/binds.cfg
+++ b/730/local/cfg/binds.cfg
@@ -1,13 +1,32 @@
-bind "f4" "console"
+unbind f4
+bind f4 "console"
 bind "mouse3" "slot3"
+unbind f
 bind "f" "use weapon_flashbang"
+unbind c
 bind "c" "use weapon_smokegrenade"
+
+////// Voice Scale
+// set default voice scaling
+voice_scale 0.75
+echo "VOICE_75%"
+// up/down
+alias "ng1" "voice_scale 0;echo VOICE__0%;alias ngup ng2;alias ngdn ng1"
+alias "ng2" "voice_scale 0.25;echo VOICE_25%;alias ngup ng3;alias ngdn ng1"
+alias "ng3" "voice_scale 0.5;echo VOICE_50%;alias ngup ng4;alias ngdn ng2"
+alias "ng4" "voice_scale 0.75;echo VOICE_75%;alias ngup ng5;alias ngdn ng3"
+alias "ng5" "voice_scale 1;echo VOICE_100%;alias ngup ng5;alias ngdn ng4"
+alias "ngup" "ng5"
+alias "ngdn" "ng3"
+bind "pgup" "ngup"
+bind "pgdn" "ngdn"
+
 // toggle between primary and secondary with q
-alias weap_tog weap_tog1
-alias weap_tog1 "slot1; alias weap_tog weap_tog2"
-alias weap_tog2 "slot2; alias weap_tog weap_tog1"
+alias weap_tog1 "slot1;alias weap_tog weap_tog2"
+alias weap_tog2 "slot2;alias weap_tog weap_tog1"
+alias weap_tog weap_tog2
 bind "q" "weap_tog"
 bind "mwheelup" "weap_tog1"
 bind "mwheeldown" "weap_tog2"
 
-echo binds loaded
+echo "binds loaded."
