--- a/730/local/cfg/crosshair.cfg
+++ b/730/local/cfg/crosshair.cfg
@@ -15,4 +15,4 @@ cl_crosshairusealpha "1"
 cl_fixedcrosshairgap "3"
 
 host_writeconfig
-echo crosshair loaded
+echo "crosshair config loaded & saved"
