--- a/730/local/cfg/autoexec.cfg
+++ b/730/local/cfg/autoexec.cfg
@@ -12,8 +12,8 @@ m_customaccel "0"
 m_mouseaccel1 "0"
 m_mouseaccel2 "0"
 
-// sensitivity
-sensitivity "0.4"
+// sensitivity (real sens 1080)
+sensitivity "0.9"
 zoom_sensitivity_ratio_mouse "1.0"
 
 // maximum ping for match making
@@ -22,6 +22,9 @@ mm_dedicated_search_maxping "80"
 // enable voice chat
 voice_enable "1"
 lobby_voice_chat_enabled "0"
+
+// audio channel setting for headphones
+sdl_speaker_channels "1"
 
 
 ////// HUD
