accounting for no wpn in quickswitch

--- a/730/local/cfg/binds.cfg
+++ b/730/local/cfg/binds.cfg
@@ -22,8 +22,8 @@ bind "pgup" "ngup"
 bind "pgdn" "ngdn"
 
 // toggle between primary and secondary with q
-alias weap_tog1 "slot1;alias weap_tog weap_tog2"
-alias weap_tog2 "slot2;alias weap_tog weap_tog1"
+alias weap_tog1 "slot3;slot1;alias weap_tog weap_tog2"
+alias weap_tog2 "slot3;slot2;alias weap_tog weap_tog1"
 alias weap_tog weap_tog2
 bind "q" "weap_tog"
 bind "mwheelup" "weap_tog1"
