added bomb find bind

--- a/730/local/cfg/binds.cfg
+++ b/730/local/cfg/binds.cfg
@@ -1,9 +1,10 @@
-unbind f4
-bind f4 "console"
+unbind "f4"
+bind "f4" "toggleconsole"
+// middle mouse knife
 bind "mouse3" "slot3"
-unbind f
+unbind "f"
 bind "f" "use weapon_flashbang"
-unbind c
+unbind "c"
 bind "c" "use weapon_smokegrenade"
 
 ////// Voice Scale
@@ -28,5 +29,10 @@ alias weap_tog weap_tog2
 bind "q" "weap_tog"
 bind "mwheelup" "weap_tog1"
 bind "mwheeldown" "weap_tog2"
+
+// find the bomb and see help messages while pressing E
+alias "+finduse" "+use;gameinstructor_enable 1"
+alias "-finduse" "-use;gameinstructor_enable 0"
+bind "e" "+finduse"
 
 echo "binds loaded."
