bind backspace to wpn drop

--- a/730/local/cfg/binds.cfg
+++ b/730/local/cfg/binds.cfg
@@ -1,5 +1,5 @@
-unbind "f4"
-bind "f4" "toggleconsole"
+unbind "F4"
+bind "F4" "toggleconsole"
 // middle mouse knife
 bind "mouse3" "slot3"
 unbind "f"
@@ -7,9 +7,12 @@ bind "f" "use weapon_flashbang"
 unbind "c"
 bind "c" "use weapon_smokegrenade"
 
+unbind "backspace"
+bind "backspace" "drop"
+
 ////// Voice Scale
 // set default voice scaling
-voice_scale 0.75
+voice_scale 0.7
 echo "VOICE_75%"
 // up/down
 alias "ng1" "voice_scale 0;echo VOICE__0%;alias ngup ng2;alias ngdn ng1"
