--- a/730/local/cfg/autoexec.cfg
+++ b/730/local/cfg/autoexec.cfg
@@ -12,12 +12,12 @@ m_customaccel "0"
 m_mouseaccel1 "0"
 m_mouseaccel2 "0"
 
-// sensitivity (real sens 1080)
-sensitivity "0.9"
+// sensitivity (real sens 840)
+sensitivity "0.7"
 zoom_sensitivity_ratio_mouse "1.0"
 
 // maximum ping for match making
-mm_dedicated_search_maxping "80"
+mm_dedicated_search_maxping "50"
 
 // enable voice chat
 voice_enable "1"
@@ -41,12 +41,16 @@ cl_radar_always_centered 0
 // size
 cl_hud_radar_scale 1.1
 // zoom
-cl_radar_scale 0.55
+cl_radar_scale 0.5
 // player icons
 cl_radar_icon_scale_min 0.4
 
 // disable developer text
 developer 0
+
+// display small net graph in bottom left corner
+net_graphpos "3"
+net_graphproportionalfont "0"
 
 
 ////// rates
@@ -54,6 +58,9 @@ cl_cmdrate "128"
 cl_updaterate "128"
 cl_interp_ratio 1
 cl_interp 0
+
+///// datagram relay (chooses relay servers near you)
+net_client_steamdatagram_enable_override 1
 
 
 ////// FPS
