added HRTF adjustments

--- a/730/local/cfg/autoexec.cfg
+++ b/730/local/cfg/autoexec.cfg
@@ -19,6 +19,8 @@ zoom_sensitivity_ratio_mouse "1.0"
 // maximum ping for match making
 mm_dedicated_search_maxping "50"
 
+///// SOUND
+
 // enable voice chat
 voice_enable "1"
 lobby_voice_chat_enabled "0"
@@ -26,9 +28,13 @@ lobby_voice_chat_enabled "0"
 // audio channel setting for headphones
 sdl_speaker_channels "1"
 
+// set HRTF amount
+snd_use_hrtf "1"
+snd_hrtf_ratio "0.5"
+
 
 ////// HUD
-hud_scaling 0.7
+hud_scaling "0.7"
 
 // show player count instead of avatars
 cl_hud_playercount_showcount 1
