add graffiti,inspect binds; bob settings

--- a/730/local/cfg/autoexec.cfg
+++ b/730/local/cfg/autoexec.cfg
@@ -19,6 +19,19 @@ zoom_sensitivity_ratio_mouse "1.0"
 // maximum ping for match making
 mm_dedicated_search_maxping "50"
 
+// viewmodel settings
+viewmodel_fov 55
+viewmodel_offset_x -0.5
+viewmodel_offset_y -1
+viewmodel_offset_z -1
+
+// viewmoddel bobbing
+cl_bob_lower_amt 6
+cl_bobamt_lat 0.4
+cl_bobamt_vert 1.5
+cl_bobcycle 0.5
+
+
 ///// SOUND
 
 // enable voice chat
