--- a/730/local/cfg/binds.cfg
+++ b/730/local/cfg/binds.cfg
@@ -6,13 +6,20 @@ unbind "f"
 bind "f" "use weapon_flashbang"
 unbind "c"
 bind "c" "use weapon_smokegrenade"
+unbind "alt"
+bind "alt" "use weapon_hegrenade"
+unbind "x"
+bind "x" "use weapon_molotov;use weapon_incgrenade"
+
+bind "i" "+lookatweapon"
+bind "o" "+spray_menu"
 
 unbind "backspace"
 bind "backspace" "drop"
 
 ////// Voice Scale
 // set default voice scaling
-voice_scale 0.7
+voice_scale 0.75
 echo "VOICE_75%"
 // up/down
 alias "ng1" "voice_scale 0;echo VOICE__0%;alias ngup ng2;alias ngdn ng1"
@@ -37,5 +44,12 @@ bind "mwheeldown" "weap_tog2"
 alias "+finduse" "+use;gameinstructor_enable 1"
 alias "-finduse" "-use;gameinstructor_enable 0"
 bind "e" "+finduse"
+
+// open team chat by pressing enter, and allchat by pressing shift+enter
+alias +walkchat "+speed; bind enter messagemode2"
+alias -walkchat "-speed; bind enter messagemode"
+bind shift +walkchat
+bind rshift +walkchat
+bind enter messagemode
 
 echo "binds loaded."
