--- a/730/local/cfg/crosshair.cfg
+++ b/730/local/cfg/crosshair.cfg
@@ -1,21 +1,22 @@
 cl_crosshair_drawoutline "0"
-cl_crosshair_dynamic_maxdist_splitratio "0.200000"
-cl_crosshair_dynamic_splitalpha_innermod "1"
-cl_crosshair_dynamic_splitalpha_outermod "0.600000"
-cl_crosshair_dynamic_splitdist "-1.500000"
+cl_crosshair_dynamic_maxdist_splitratio "0.2"
+cl_crosshair_dynamic_splitalpha_innermod "0.95"
+cl_crosshair_dynamic_splitalpha_outermod "0.85"
+cl_crosshair_dynamic_splitdist "-1.5"
 cl_crosshair_outlinethickness "3.000000"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_sniper_width "1"
+cl_crosshair_t 0
 cl_crosshairalpha "255"
 cl_crosshaircolor "5"
 cl_crosshaircolor_b "255"
 cl_crosshaircolor_g "0"
 cl_crosshaircolor_r "255"
-cl_crosshairdot "0"
-cl_crosshairgap "-13.000000"
+cl_crosshairdot "1"
+cl_crosshairgap "-21"
 cl_crosshairgap_useweaponvalue "0"
 cl_crosshairscale "0"
-cl_crosshairsize "4.500000"
+cl_crosshairsize "6.500000"
 cl_crosshairstyle "2"
 cl_crosshairthickness "0.500000"
 cl_crosshairusealpha "1"
